# rayracer

./: CMakeLists.txt  README.md
src/: :w  <  main.c
src/app/: app.c  app.h
src/entity/: entity.c  entity.h
src/objects/: player.c  player.h  tile.c  tile.h
src/renderer/: render_info.h  renderer.c  renderer.h
src/scenes/: game.c  game.h  game_context.h
src/util/: utils.c  utils.h
src/util/camp_array/: camp_array.c  camp_array.h
